fix layout issue in expeditions index and add social buttons to expedition how

--- a/resources/assets/sass/front/expeditions/_index.scss
+++ b/resources/assets/sass/front/expeditions/_index.scss
@@ -19,7 +19,7 @@
 
     @include respond-to(phone) { width: 90%; }
 
-    &:last-of-type {
+    &:last-of-type:nth-of-type(odd) {
       margin-right: auto;
       margin-left: 5%;
     }
