--- a/resources/assets/sass/front/expeditions/_show.scss
+++ b/resources/assets/sass/front/expeditions/_show.scss
@@ -7,4 +7,10 @@
     margin-top: 50px;
     width: 300px;
   }
+
+  .social-icon-row {
+    text-align: center;
+    margin-top: -20px;
+    margin-bottom: 30px;
+  }
 }
